--- a/contrib/README
+++ b/contrib/README
@@ -1,15 +1,13 @@
 This directory contains miscellaneous contributed stuff for IFM.
 
-ifm.vim			Support for IFM syntax colouring in vim (a vi
-			clone), contributed by Dave Chapeskie
-			(dchapes@ddm.on.ca).
+ifm.vim	        Support for IFM syntax colouring in vim (a vi clone),
+		contributed by Dave Chapeskie (dchapes@ddm.on.ca).
 
-ifm-mode.el		GNU Emacs IFM mode.  This is a really bare-bones
-			major mode at the moment, and only exists so that
-			syntax highlighting can work on it.
+ifm-mode.el	GNU Emacs IFM mode.  This is a really bare-bones major
+		mode at the moment, and only exists so that syntax
+		highlighting can work on it.
 
-rec2scr			Perl script which invokes the dumb-frotz
-			interpreter (available from the IF archive) to
-			non-interactively convert a recording of game
-			commands into a transcript.  Very useful for
-			testing the recording output from IFM.
+rec2scr		Perl script which invokes the dumb-frotz interpreter
+		(available from the IF archive) to non-interactively
+		convert a recording of game commands into a transcript.
+		Very useful for testing the recording output from IFM.
